pods.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-iot-server-service
spec:
  selector:
    matchLabels:
      app: edge-iot-server-service
  replicas: 1
  template: 
    metadata:
      labels:
        app: edge-iot-server-service
    spec:
      containers:
      - name: edge-iot-server-service
        image: localhost:5000/edge-iot-server-service
