service.yml
apiVersion: v1
kind: Service
metadata:
  name: edge-iot-server-service
spec:
  selector:
    app: edge-iot-server-service
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
  type: NodePort
