rules.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: edge-iot-server-service
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: test.192.168.0.120
    http:
      paths:
        - path: /v1
          backend:
            serviceName: edge-iot-server-service
            servicePort: 80
